<resources>
    <string name="app_name">Pantry Organizer</string>

    <string name="login_fragment_title">Log in</string>
    <string name="login_fragment_status">Authenticating</string>
    <string name="login_email_hint">E-Mail Address</string>
    <string name="login_password_hint">Password</string>
    <string name="login_register_hint">Don\'t have an account? Register!</string>

    <string name="register_fragment_title">Register</string>
    <string name="register_fragment_status">Please Wait</string>
    <string name="register_confirm_password_hint">Confirm Password</string>
    <string name="register_login_hint">Already have an account? Log in!</string>

    <string name="sign_out_message">Are you sure you want to sign out of this account?</string>
    <string name="sign_out_confirm">Log Out</string>
    <string name="sign_out_cancel">Cancel</string>

    <string name="pantry_nav">Pantries</string>
    <string name="recipe_nav">Recipes</string>
    <string name="planner_nav">Planner</string>
    <string name="shopping_nav">Shopping</string>

    <string name="add_pantry_name_label">Pantry Name</string>
    <string name="add_pantry_location_label">Pantry Location</string>
    <string name="add_pantry_image_label">Pantry Picture</string>
    <string name="add_pantry_name_hint">Name</string>
    <string name="add_pantry_location_hint">Location</string>

    <string name="add_recipe_name_label">Recipe Name</string>
    <string name="add_recipe_image_label">Recipe List Picture</string>
    <string name="add_recipe_name_hint">Name</string>

    <string name="create_menu_item_desc">CREATE</string>
    <string name="add_pantry_menu_item_desc">Add New Pantry</string>
    <string name="add_recipe_menu_item_desc">Add New Recipe</string>
    <string name="add_item_menu_item_desc">Add New Item</string>
    <string name="add_meal_menu_item_desc">Add New Meal</string>

    <string name="delete_item_message">Are you sure you want to delete this item?</string>
    <string name="delete_item_delete_button">Delete</string>
    <string name="delete_item_cancel_button">Cancel</string>
    <string name="add_food_menu_item_desc">Add New Food</string>
    <string name="add_custom_food_menu_item">Create Custom</string>

    <string name="api_food_search_hint">Search Food Database</string>
    <string name="api_food_search_button">Search</string>
    <string name="api_food_searching_button">Searching</string>

    <string name="food_detail_loading_label">…</string>
    <string name="food_detail_quantity_label">Quantity</string>
    <string name="food_detail_calories_label">Calories</string>
    <string name="food_detail_serving_size_label">Serving Size</string>
    <string name="food_detail_fat_label">Fat (g)</string>
    <string name="food_detail_sugar_label">Sugars (g)</string>
    <string name="food_detail_carbs_label">Carbohydrates (g)</string>
    <string name="food_detail_protein_label">Protein (g)</string>

    <string name="add_food_quantity_label">Enter Quantity:</string>
    <string name="add_food_quantity_hint">Qty</string>
    <string name="add_pantry_food_confirm_button">Add to Pantry</string>
    <string name="add_recipe_food_confirm_button">Add to Recipe</string>
    <string name="add_food_cancel_button">Cancel</string>

    <string name="remove_food_confirm_button">Remove</string>
    <string name="remove_food_cancel_button">Cancel</string>

    <string name="pantry_list_no_items">Get started by adding a new pantry!</string>
    <string name="recipe_list_no_items">Get started by adding a new recipe!</string>
    <string name="food_list_no_items">Get started by adding some food!</string>
</resources>