<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".pantry.activity.AddPantryActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:paddingBottom="?attr/actionBarSize">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_pantry_name_label"
                android:layout_marginStart="5dp"
                android:paddingTop="15dp"/>

            <EditText
                android:id="@+id/addPantry_pantryName_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_border"
                android:layout_marginTop="5dp"
                android:hint="@string/add_pantry_name_hint"/>

            <TextView
                android:id="@+id/addPantry_pantryLocation_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="5dp"
                android:text="@string/add_pantry_location_label"/>

            <EditText
                android:id="@+id/addPantry_pantryLocation_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_border"
                android:layout_marginTop="5dp"
                android:hint="@string/add_pantry_location_hint"/>

            <TextView
                android:id="@+id/addPantry_pantryImage_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="5dp"
                android:text="@string/add_pantry_image_label" />

            <ImageView
                android:id="@+id/addPantry_pantryImage_imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/add_food_picture_icon"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:background="@drawable/edit_text_border"
                android:layout_marginTop="5dp"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>