<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/pantryFoodDetailData_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <ImageView
                android:id="@+id/pantryFoodDetail_imageView"
                android:src="@drawable/loading_icon"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/food_detail_quantity_label"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/pantryFoodDetailQuantity_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/food_detail_loading_label"
                android:textSize="13pt"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/food_detail_calories_label"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/pantryFoodDetailCalories_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/food_detail_loading_label"
                android:textSize="13pt"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/food_detail_serving_size_label"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/pantryFoodDetailServingSize_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/food_detail_loading_label"
                android:textSize="13pt"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/food_detail_fat_label"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/pantryFoodDetailFat_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/food_detail_loading_label"
                android:textSize="13pt"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/food_detail_sugar_label"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/pantryFoodDetailSugar_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/food_detail_loading_label"
                android:textSize="13pt"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/food_detail_carbs_label"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/pantryFoodDetailCarbs_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/food_detail_loading_label"
                android:textSize="13pt"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/food_detail_protein_label"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/pantryFoodDetailProtein_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/food_detail_loading_label"
                android:textSize="13pt"
                android:textStyle="bold"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>