<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".recipe.activity.AddRecipeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_recipe_name_label"
                android:layout_marginStart="5dp"
                android:paddingBottom="5dp"/>

            <EditText
                android:id="@+id/addRecipe_recipeName_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_border"
                android:layout_marginBottom="10dp"
                android:hint="@string/add_recipe_name_hint"/>

            <TextView
                android:id="@+id/addRecipe_recipeImage_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/add_recipe_image_label" />

            <ImageView
                android:id="@+id/addRecipe_recipeImage_imageView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/add_food_picture_icon"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:background="@drawable/edit_text_border"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>