<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/addFoodDetail_addFoodButton_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <ImageView
                android:id="@+id/addFoodDetail_imageView"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/food_detail_calories_label"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/addFoodDetailCalories_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="13pt"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/food_detail_serving_size_label"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/addFoodDetailServingSize_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="13pt"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/food_detail_fat_label"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/addFoodDetailFat_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="13pt"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/food_detail_sugar_label"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/addFoodDetailSugar_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="13pt"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/food_detail_carbs_label"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/addFoodDetailCarbs_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="13pt"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/food_detail_protein_label"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/addFoodDetailProtein_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="13pt"
                android:textStyle="bold"/>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/addFoodDetail_addFoodButton_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/addFoodDetail_addFoodCancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:paddingTop="25dp"
            android:orientation="vertical"
            android:background="@drawable/button_red">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/cancel_icon"
                android:layout_gravity="center"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/add_food_cancel_button"
                android:textColor="@color/white"
                android:textSize="7pt"
                android:background="@drawable/button_red"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/addFoodDetail_addFoodConfirm_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:paddingTop="25dp"
            android:orientation="vertical"
            android:background="@drawable/button_green">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/add_food_icon"
                android:layout_gravity="center"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/add_food_confirm_button"
                android:textColor="@color/white"
                android:textSize="7pt"
                android:background="@drawable/button_green"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>