<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/removeFoodMessage_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="30dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/cancel_icon"
            android:tint="@color/black"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/removeFoodMessage_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="8pt"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/removeFoodQuantity_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="20dp"
        app:layout_constraintTop_toBottomOf="@id/removeFoodMessage_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_food_quantity_label"
            android:layout_gravity="center"
            android:textSize="8pt"
            android:layout_marginHorizontal="20dp"/>

        <EditText
            android:id="@+id/removeFoodQuantity_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/add_food_quantity_hint"
            android:inputType="number"
            android:gravity="center"
            android:ems="5"
            android:background="@drawable/edit_text_border"
            android:layout_margin="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/removeFoodQuantity_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/removeFoodCancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:paddingVertical="15dp"
            android:text="@string/remove_food_cancel_button"
            android:textColor="@color/white"
            android:textSize="7pt"
            android:background="@drawable/button_gray"/>

        <Button
            android:id="@+id/removeFoodConfirm_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:paddingVertical="15dp"
            android:text="@string/remove_food_confirm_button"
            android:textColor="@color/white"
            android:textSize="7pt"
            android:background="@drawable/button_red"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>