<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/signOutMessage_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="30dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/sign_out_icon"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/signOutMessage_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_out_message"
            android:textSize="8pt"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginVertical="30dp"
        app:layout_constraintTop_toBottomOf="@id/signOutMessage_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/signOutCancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:paddingVertical="15dp"
            android:text="@string/sign_out_cancel"
            android:textColor="@color/white"
            android:textSize="7pt"
            android:background="@drawable/button_gray"/>

        <Button
            android:id="@+id/signOutConfirm_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:paddingVertical="15dp"
            android:text="@string/sign_out_confirm"
            android:textColor="@color/white"
            android:textSize="7pt"
            android:background="@drawable/button_red"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>